fix top at top setting in pad with overflowing values

--- a/site/styles.css
+++ b/site/styles.css
@@ -654,7 +654,6 @@ option,
 
 .output-values {
     display: flex;
-    flex-wrap: wrap-reverse;
     column-gap: 1em;
     align-items: center;
     font-family: "Code Font", monospace;
